# DenialDetectives

./: .gitignore  README.md  docker-compose.yml
backend/: pyproject.toml  requirements.txt
backend/app/: config.py  main.py  models.py
backend/app/agent/: guardrails.py  orchestrator.py  prompts.py  tools.py
backend/app/api/: routes_claims.py  routes_triage.py
backend/app/knowledge/: ingest.py  store.py
backend/app/knowledge/sources/: carc_codes.csv  ncci_edits.csv
backend/app/knowledge/sources/policies/: aetna-precert-knee-arthroscopy.md  aetna-therapy-medical-necessity.md  bcbs-eligibility-termination.md  bcbs-ncci-bundling.md  cigna-coordination-of-benefits.md  cigna-timely-filing.md  uhc-duplicate-claims.md  uhc-modifier-25-same-day-em.md
backend/app/services/: appeals.py  claim_repo.py  demo_cache.py  memory.py  resubmit.py
backend/data/demo_cache/: DEN-001.json  DEN-002.json  DEN-007.json  DEN-017.json  DEN-028.json  DEN-103.json
backend/data/feeds/: feed-20260715T083155605947.json
backend/data/memory/: decisions.json  lessons.json  outcomes.json
backend/data/synthetic/: claims.json  denials.json  ground_truth.json  resubmit_history.json
backend/tests/: test_api.py  test_guardrails.py  test_knowledge.py  test_orchestrator.py  tools_test.py
docs/: ARCHITECTURE.md  Prompt - Denial Detectives.txt  sample-feed-invalid.json  sample-feed-valid.json  sample-feed.json
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  types.ts
frontend/src/api/: sse.ts
scripts/: generate_synthetic.py  validate.py
(+8 files in other folders)
