[project]
name = "claimguard-backend"
version = "0.1.0"
description = "ClaimGuard — denial triage & resubmission agent (backend)"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "sse-starlette>=2.1",
    "anthropic>=0.69",
    "chromadb>=0.5",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]

[tool.pytest.ini_options]
pythonpath = ["."]
